Check operand for type, not LHS.

When folding, the LHS has not been set, so we should be checking the type of
op1.  We should also make sure op1 is not undefined.

	PR tree-optimization/105597
	gcc/
	* range-op.cc (operator_minus::lhs_op1_relation): Use op1 instead
	of the lhs and make sure it is not undefined.
	gcc/testsuite/
	* gcc.dg/pr105597.c: New.